# laba1

./: CMakeLists.txt  build.sh  build_and_package.sh  main.cpp  test.cpp
.github/workflows/: build.yml
